<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Ryan Aquilina on 2/19/18 2:56 PM
  ~ Contact details in https://www.upwork.com/freelancers/~01ed20295946e923f0
  ~ Copyright (c) 2018.  All rights reserved
  ~
  ~ Last modified 2/19/18 2:56 PM
  -->

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondaryDark">

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateOnly="false"
            android:layout_marginTop="-8dp"
            android:indeterminateTint="@color/colorAccent"
            android:indeterminateTintMode="src_in"
            android:visibility="invisible"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"/>

    <ScrollView
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--android:visibility="gone">-->

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary"
                    app:cardBackgroundColor="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:id="@+id/cardView"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/item_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:background="@drawable/border_white"
                        android:overlapAnchor="false"
                        android:textAlignment="center"
                        app:ms_hint="@string/configuration_mode_spinner_hint"
                        app:ms_hintColor="@color/colorPrimaryText"
                        app:ms_arrowColor="@color/colorPrimaryText"
                        app:ms_baseColor="@android:color/transparent"
                        app:ms_highlightColor="@android:color/transparent"
                        app:ms_enableFloatingLabel="false"
                        app:ms_arrowSize="18sp"/>
            </android.support.v7.widget.CardView>

            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/device_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/configuration_label_device_name"
                    android:inputType="text"
                    android:layout_below="@+id/cardView"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    app:met_baseColor="@color/colorPrimaryText"
                    app:met_primaryColor="@color/colorAccent"
                    app:met_errorColor="@color/colorError"
                    app:met_floatingLabel="highlight"
                    app:met_minBottomTextLines="1"
                    android:nextFocusUp="@id/device_name_edit_text"
                    android:nextFocusLeft="@id/device_name_edit_text"/>

            <LinearLayout
                    android:id="@+id/linear_layout_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_below="@+id/device_name_edit_text"
                    android:layout_alignParentStart="true">

                <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/pixels_per_strip_edit_text"
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/configuration_label_pixels_per_strip"
                        android:inputType="number"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        app:met_baseColor="@color/colorPrimaryText"
                        app:met_primaryColor="@color/colorAccent"
                        app:met_errorColor="@color/colorError"
                        app:met_floatingLabel="highlight"
                        app:met_minBottomTextLines="1"
                        android:layout_weight="1"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/chunk_size_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/configuration_label_chunk_size"
                        android:inputType="number"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        app:met_baseColor="@color/colorPrimaryText"
                        app:met_primaryColor="@color/colorAccent"
                        app:met_errorColor="@color/colorError"
                        app:met_floatingLabel="highlight"
                        app:met_minBottomTextLines="1"
                        android:layout_weight="1"/>

            </LinearLayout>



            <LinearLayout
                    android:id="@+id/linear_layout_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_layout_one"
                    android:orientation="horizontal"
                    android:weightSum="2">

                <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/udp_port_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/configuration_label_udp_port"
                        android:inputType="number"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        app:met_baseColor="@color/colorPrimaryText"
                        app:met_primaryColor="@color/colorAccent"
                        app:met_errorColor="@color/colorError"
                        app:met_floatingLabel="highlight"
                        app:met_minBottomTextLines="1"
                        android:layout_weight="1"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/amps_limit_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/configuration_label_amps_limit"
                        android:inputType="numberDecimal"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        app:met_baseColor="@color/colorPrimaryText"
                        app:met_primaryColor="@color/colorAccent"
                        app:met_errorColor="@color/colorError"
                        app:met_floatingLabel="highlight"
                        app:met_minBottomTextLines="1"
                        android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/linear_layout_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_below="@+id/linear_layout_two"
                    android:layout_alignParentStart="true">

                <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/ma_per_strip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/configuration_label_ma_per_pixel"
                        android:inputType="number"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        app:met_baseColor="@color/colorPrimaryText"
                        app:met_primaryColor="@color/colorAccent"
                        app:met_errorColor="@color/colorError"
                        app:met_floatingLabel="highlight"
                        app:met_minBottomTextLines="1"
                        android:layout_weight="1"/>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="1">

                    <aquilina.ryan.homelightingapp.ui.configuration_mode.ColorBox
                            android:id="@+id/colorBox"
                            android:layout_width="50dp"
                            android:layout_height="50dp"/>
                </RelativeLayout>
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/update_device_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/configuration_button_update_device"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:textColor="@color/colorPrimaryText"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_below="@+id/linear_layout_three"
                    android:layout_marginTop="32dp"
                    android:layout_centerHorizontal="true"/>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
            android:id="@+id/linear_layout_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_info_outline_white_48dp"
                android:contentDescription="@string/text_view_create_macros"/>

        <TextView
                android:id="@+id/text_view_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_no_device_online"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"
                android:fontFamily="@font/raleway_bold"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textAlignment="center"/>
    </LinearLayout>
</FrameLayout>
